public/styles/stylesheet.css
/* FONTS INLADEN */
@font-face {
    font-family: "calvino-grande";
    src: url(../assets/Calvino-Grande-Bold-trial.ttf);
}
@font-face {
    font-family: "figtree";
    src: url('../assets/Figtree-VariableFont_wght.ttf');
}

*, *::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
}

body {
    /* COLORS */
    --background-color: rgba(17, 17, 17, 1);
    --background-color-lighter: rgba(29, 29, 29, 1);
    --text-color: rgba(245, 245, 245, 1);
    --text-color-darker: rgba(166, 166, 166, 1);

    --accent-color-one: rgba(100, 170, 199, 1);
    --accent-color-two: rgba(152, 74, 74, 1);
    --accent-color-three: rgba(110, 145, 88, 1);
    --accent-color-four: rgba(124, 96, 151, 1);

    /* FONTS */
    --primary-font: "calvino-grande", serif;
    --secondary-font: "figtree", serif;

    /* FONT-WEIGHT */
    --fw-light: 400;
    --fw-medium: 700;
    --fw-large: 800;

    /* BORDERS */
    --border: 1.25px solid rgba(245, 245, 245, 0.2);
    --border-radius: 1.75rem;

    /* SIZING */
    --xs: .5rem;
    --sm: 1rem;
    --md: 2rem;
    --lg: 3rem;
    --xl: 4rem;
    --xxl: 6rem;
    
    color: var(--text-color);
    background-color: var(--background-color);
}

h1, h2, h3, h4, h5, h6 {
    color: var(--text-color);
    font-family: var(--primary-font);
}

h1,
.xl {
    font-size: clamp(1.875rem, 6vw, 3.5rem);
}

h2,
.lg {
    font-size: clamp(var(--md), 5vw, 2.5rem);
}

h3,
.md {
    font-size: clamp(1.5rem, 4vw, var(--md))
}

h4,
.sm {
    font-size: clamp(var(--sm), 3.5vw, 1.5rem)
}

.xs {
    font-size: clamp(.75rem, 3.5vw, 1.5rem)
}

p, a {
    color: var(--text-color);
    font-family: var(--secondary-font);
}
a {
    text-decoration: none;
}

.theme-blue {
    --accent-color: rgba(65, 111, 131, 0.5);
    --button-color: var(--accent-color-one);
    --button-hover: rgb(48, 106, 131);
}

.theme-red {
    --accent-color: rgba(152, 74, 74, 0.5);
    --button-color: var(--accent-color-two);
    --button-hover: rgb(115, 49, 49);
}

.theme-green {
    --accent-color: rgba(110, 145, 88, 0.5);
    --button-color: var(--accent-color-three);
    --button-hover: rgb(80, 111, 60);
}

.theme-pink {
    --accent-color: rgba(124, 96, 151, 0.5);
    --button-color: var(--accent-color-four);
    --button-hover: rgb(93, 65, 120);
}

body *:focus-visible{
    outline: .25rem solid var(--accent-color);
}

button,
.btn,
.start-btn {
    border: var(--border);
    border-radius: var(--border-radius);
    padding: 0.25rem var(--sm);
    width: fit-content;
    cursor: pointer;
}

